# CooperativeAICoding

./: .gitignore  HOW-TO-USE.md  LICENSE  README.md
app/CoperativeAI/src-tauri/: Cargo.toml  tauri.conf.json
app/CoperativeAI/src-tauri/capabilities/: default.json
app/CoperativeAI/src-tauri/src/: diagram.rs  drawio.rs  emit.rs  figma.rs  github.rs  handover.rs  main.rs  pack.rs  review.rs  scaffold.rs  ssh.rs  starter.rs  test_runner.rs  vcs.rs  work_item_files.rs  workspace.rs
app/CoperativeAI/src-tauri/src/ai/: backend.rs  client.rs  estimator.rs  keys.rs  mod.rs  ollama.rs  router.rs  tiering.rs  validation.rs  vision.rs
app/CoperativeAI/src-tauri/src/commands/: ai_run.rs  ai_settings.rs  architecture.rs  budgets.rs  capacity.rs  deliverables.rs  design.rs  emit.rs  feedback.rs  github.rs  inspectors.rs  mod.rs  models.rs  policies.rs  products.rs  recommendations.rs  repositories.rs  roles.rs  settings.rs  solutions.rs  sprints.rs  strategies.rs  strategy.rs  team_members.rs  terminals.rs  test_cases.rs  vcs_ops.rs  windows.rs  work_item_changes.rs  work_item_plans.rs  work_items.rs  workspace.rs
app/CoperativeAI/src-tauri/src/db/: ai_feedback.rs  ai_provider.rs  ai_usage.rs  architecture_doc.rs  change_run.rs  commit_policy.rs  deliverable.rs  design_asset.rs  developer_rules.rs  emitted_file.rs  feature_design.rs  mod.rs  model_install.rs  model_price.rs  product.rs  product_budget.rs  product_policy.rs  repo_link.rs  repository.rs  role.rs  solution.rs  solution_management.rs  solution_strategy.rs  sprint.rs  sprint_capacity.rs  strategy.rs  system_setting.rs  team_member.rs  test_case.rs  work_item.rs  work_item_change.rs  work_item_link.rs  work_item_plan.rs  (+1 more)
(+231 files in other folders)
