[package]
name = "coperativeai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = "2.11.5"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
turso = "0.6.1"

[build-dependencies]
tauri-build = "2.6.3"
